<resources>
    <string name="app_name">Agora EasyCall</string>
    <string name="app_name_chinese">Agora Easy Call</string>
    <string name="app_name_total">Agora Easy Call</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="back">Back</string>

    <string name="main_by_key">Login with Key</string>
    <string name="main_no_key">Need a key? Click Here</string>

    <string name="login_key">Vendor Key</string>
    <string name="login_user">User Name</string>
    <string name="login">Login</string>
    <string name="login_key_required">Vendor key can not be empty</string>
    <string name="login_user_required">User name can not be empty</string>

    <string name="select_test">Test</string>
    <string name="select_channel">Enter Room No.</string>
    <string name="select_video">Join Video Call</string>
    <string name="select_voice">Join Voice Call</string>
    <string name="select_channel_required">Room No. can not be empty</string>

    <string name="sliding_record">Conf. History</string>
    <string name="sliding_resolution">Video Resolution</string>
    <string name="sliding_rate">Max. Bitrate</string>
    <string name="sliding_frame">Max. Framerate</string>
    <string name="sliding_volume">Speaker Volume</string>
    <string name="sliding_tape">Recording</string>
    <string name="sliding_path">Log Path</string>
    <string name="sliding_float">Pop up</string>
    <string name="sliding_about">About</string>

    <string name="sliding_value_cif">CIF</string>
    <string name="sliding_value_480">480p</string>
    <string name="sliding_value_720">720p</string>
    <string name="sliding_value_1080">1080p</string>
    <string name="sliding_value_150k">150kbps</string>
    <string name="sliding_value_500k">500kbps</string>
    <string name="sliding_value_800k">800kbps</string>
    <string name="sliding_value_1m">1Mbps</string>
    <string name="sliding_value_2m">2Mbps</string>
    <string name="sliding_value_5m">5Mbps</string>
    <string name="sliding_value_10m">10Mbps</string>
    <string name="sliding_value_15">15fps</string>
    <string name="sliding_value_20">20fps</string>
    <string name="sliding_value_24">24fps</string>
    <string name="sliding_value_30">30fps</string>
    <string name="sliding_value_60">60fps</string>
    <string name="sliding_value_0">静音</string>
    <string name="sliding_value_50">50</string>
    <string name="sliding_value_100">100</string>
    <string name="sliding_value_150">150</string>
    <string name="sliding_value_200">200</string>
    <string name="sliding_value_255">255</string>


    <string name="profile_title">Personal Info</string>
    <string name="profile_key_input">Please Enter Vendor Key</string>
    <string name="profile_user_input">Please Enter User Name</string>
    <string name="profile_edit">Update</string>
    <string name="profile_confirm">Done</string>

    <string name="record_title">Conf. History</string>
    <string name="record_report">Conf Report......</string>
    <string name="record_quality">Conf Quality</string>

    <string name="about_title">About</string>
    <string name="about_name">Agora Conf.</string>
    <string name="about_version">v1.2.0</string>
    <string name="about_update">Update</string>
    <string name="about_issue">FAQ</string>

    <string name="channel_title">Room %s</string>
    <string name="channel_mute">Mute</string>
    <string name="channel_loudspeaker">Speaker</string>
    <string name="channel_close">Camera Off</string>
    <string name="channel_change">Switch Camera</string>
    <string name="channel_video">Video Call</string>
    <string name="channel_voice">Voice Call</string>
    <string name="channel_prepare">Waiting for attendees</string>
    <string name="channel_join">&#160;joined room</string>
    <string name="channel_leave">&#160;left room</string>
    <string name="channel_mute_video">&#160;muted video</string>
    <string name="channel_open_video">&#160;unmuted video</string>
    <string name="channel_mute_audio">&#160;muted audio</string>
    <string name="channel_open_audio">&#160;unmuted audio</string>

    <string name="web_key">Get Your Key</string>
    <string name="web_issue">FAQs</string>

    <string name="test_top">Echo Test</string>
    <string name="test_bottom_normal_one">Click Test to Start</string>
    <string name="test_bottom_normal_two">Please speak to the phone</string>
    <string name="test_cancel">Cancel</string>
    <string name="test_test_one">Test</string>
    <string name="test_test_two">In Testing</string>

    <string name="evaluation_top">Please rate the call</string>
    <string name="evaluation_bottom">Let us do better</string>
    <string name="evaluation_time">Total Time</string>
    <string name="evaluation_bytes">Total Trafic</string>
    <string name="evaluation_close">Close</string>
    <string name="evaluation_evaluate">Rate</string>

    <string name="overall_text">In Call</string>

    <string name="error">Vendor key updated, please login again.</string>
    <string name="error_101">Invalid vendor key, please login again.</string>
    <string name="error_confirm">Done</string>

</resources>
