<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:background="@color/app_background">

    <RelativeLayout
        android:id="@+id/about_actionbar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/ic_key_rectangle_bg">

        <!--Back Button-->

        <ImageView
            android:id="@+id/about_back"
            android:layout_width="16dp"
            android:layout_height="13dp"
            android:layout_marginLeft="17dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_key_navi_button_back"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/about_title"
            android:textSize="18sp"
            android:textColor="@color/white"/>

    </RelativeLayout>

    <ImageView
        android:id="@+id/about_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/about_actionbar"
        android:layout_marginTop="38dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_about_logo"/>

    <TextView
        android:id="@+id/about_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/about_logo"
        android:layout_centerHorizontal="true"
        android:text="@string/about_name"
        android:textSize="14sp"
        android:textColor="@color/about_blue"/>

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/about_name"
        android:layout_centerHorizontal="true"
        android:text="@string/about_version"
        android:textSize="12sp"
        android:textColor="@color/about_gray"/>
    
    <LinearLayout
        android:id="@+id/about_update"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="85dp"
        android:layout_below="@+id/about_version"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/ic_about_rectangle_bg">
    
        <TextView
            android:id="@+id/about_update_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/about_update"
            android:textSize="16sp"
            android:textColor="@color/about_black" />
        
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_about_cell_new"/>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/about_issue"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/about_update"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:background="@drawable/ic_about_rectangle_bg">

        <TextView
            android:id="@+id/about_issue_text"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/about_issue"
            android:textSize="16sp"
            android:textColor="@color/about_black" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_about_cell_more"/>

    </RelativeLayout>

    <include
        android:id="@+id/about_overall"
        layout="@layout/button_overall"/>

</RelativeLayout>